--- a/scratch.tex
+++ b/scratch.tex
@@ -171,50 +171,72 @@ Given a model-based reinforcement learning algorithm (such as RMAX or UCB), we w
 
 \subsection{RMAX}
 
-We start with an episodic nonstationery MDP \(M = (\mathcal{S}, \mathcal{A}, H, \mathbb{P}, R, \rho)\). Let \(L\) be a collection of states and actions \(L \subset \mathcal{S} \times \mathcal{A}\) corresponding to the set of states marked unknown in the RMAX algorithm.
+We start with an episodic nonstationery MDP \(M = (\mathcal{S}, \mathcal{A}, H, \mathbb{P}, R, \rho)\). Let \(L\) be a collection of states and actions \(L \subset \mathcal{S} \times \mathcal{A} \times [H]\) corresponding to the set of states marked unknown in the RMAX algorithm.
 
 \begin{defn}[\(M_L\)]
-    Let \(M\) and \(L\) be defined as above. We define \(M_L\) as a MDP with the same states and actions as \(M\), and with the same rewards and transitions for \((s, a) \notin L\). For \((s, a) \in L\), the the reward will be equal to \(R_{max}\) and the transition will lead to an absorbing state that always gives reward \(R_{max}\).
+    Let \(M\) and \(L\) be defined as above. We define \(M_L\) as a MDP with the same states and actions as \(M\), and with the same rewards and transitions for \((s, a, h) \notin L\). For \((s, a, h) \in L\), the the reward will be equal to \(R_{max}\) and the transition will lead to an absorbing state that always gives reward \(R_{max}\).
 \end{defn}
 
-The RMAX algorithm works by starting with \(L_0 = \mathcal{S} \times \mathcal{A}\), and using the optimal policy for \(M_{L_0}\) on \(M\). Once enough samples have been collected from a state-action pair \((s, a)\), it is removed from \(L_0\) to get \(L_1 = L_0 \setminus \{(s, a)\}\), and then using the optimal policy for \(M_{L_1}\). This is done until there are no unknown states left (i.e., \(L\) is empty).
+The RMAX algorithm works by starting with \(L_0 = \mathcal{S} \times \mathcal{A}\), and using the optimal policy for \(M_{L_0}\) on \(M\). Once enough samples have been collected from a state-action pair \((s, a, h)\), it is removed from \(L_0\) to get \(L_1 = L_0 \setminus \{(s, a, h)\}\), and then using the optimal policy for \(M_{L_1}\). This is done until there are no unknown states left (i.e., \(L\) is empty).
 
 Note that
-\[\mathcal{S} \times \mathcal{A} = L_0 \supset L_1 \supset \ldots \supset L_{SA} = \emptyset\]
+\[\mathcal{S} \times \mathcal{A} \times [H] = L_0 \supset L_1 \supset \ldots \supset L_{SAH} = \emptyset\]
 
 Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
 
 \begin{thm}[]
-    Fix \(0 < \delta < 1, \epsilon > 0\). Then we can find an \(\epsilon\)-optimal policy with probability higher than \(1 - \delta\) by performing the following steps on the sequence of MDP's \(M_1, \ldots, M_{SA}\) with corresponding optimal policies \(\pi^*_{1}, \pi^{*}_{SA}\):
+    Fix \(0 < \delta < 1, \epsilon > 0\). Then we can find an \(\epsilon\)-optimal policy with probability higher than \(1 - \delta\) by performing the following steps on the sequence of MDP's \(M_1, \ldots, M_{SAH}\) with corresponding optimal policies \(\pi^*_{1}, \pi^{*}_{SAH}\):
 
     \begin{itemize}
         \item Initialize \(\pi_0\) to be a random policy.
         \item For \(t = 1, \ldots, n\), follow \(\pi_{t-1}\) with \(\epsilon\)-greedy exploration to collect \(K_2\) trajectories. Compute the optimal policy \(\pi_t\) from the model learned by the trajectories.
-        \item Output \(\pi_{SA}\).
+        \item Output \(\pi_{SAH}\).
     \end{itemize}
     
 \end{thm}
 
 
 \begin{lemma}[]
-    Let \(\alpha > 0\) and \(1 \leq j \leq SA\). Denote \((s, a)\) to be the entry in \(L_{j-1}\) but not in \(L_{j}\). Consider playing the policy \(\pi_{j-1}^*\) with \(\epsilon\)-greedy on \(M_j\). Then either
+    Let \(\alpha > 0\) and \(1 \leq j \leq SA\). Denote \((s, a)\) to be the entry in \(L_{j-1}\) but not in \(L_{j}\). Consider playing the policy \(\pi_{j-1}^*\) with \(\epsilon\)-greedy on \(M_j\). Let \(V_{M}(\pi)\) denote the value function on MDP \(M\) of policy \(\pi\), and let \(V^*_{M}\) be the value of any optimal policy on \(M\). Then either
 
     \begin{enumerate}
-        \item \(V^{\pi_{j-1}^*}_{M_j} > V^{\pi_{j}^*}_{M_j} - \alpha\)
-        \item \((s, a)\) will be played with probability of at least \(\frac{\alpha}{H*R_{max}}\).
+        \item \(V_{M_j} (\pi_{j-1}) > V^*_{M_j} - \alpha\)
+        \item \((s, a, h)\) will be played with probability of at least \(\frac{\alpha}{H*R_{max}}\).
     \end{enumerate}
     
 \end{lemma}
 
 \begin{proof}[Proof]
-    Let \(T\) be the set of possible trajectories in \(M_j\). Then
-    \[|V^{\pi_{j-1}^*}_{M_{j-1}} - V^{\pi_{j}^*}_{M_j}| \leq |\sum_{t \in T} Pr_{M_{j-1}, \pi_{j-1}}[t] V_{M_{j-1}}(t) - \sum_{t \in T} Pr_{M_{j}, \pi_{j}}[t] V_{M_{j}}(t)|\]
-    
-    Let \(T'\) be the set of trajectories that passes through \((s, a)\). Then the above expression can be reduced to
-    \[|\sum_{t \in T'} Pr_{M_{j-1}, \pi_{j-1}}[t] V_{M_{j-1}}(t) - \sum_{t \in T'} Pr_{M_{j}, \pi_{j}}[t] V_{M_{j}}(t)|\]
-    \[\leq H*R_{max} \sum_{t \in T'} Pr_{M_{j-1}, \pi_{j-1}}[t] - Pr_{M_{j}, \pi_{j}}[t] \leq H * R_{max} * \sum_{t \in T'} Pr_{M_{j}, \pi_{j-1}}[t]\]
+    This proof follows the proof of lemma 6 in the original R-max paper.
 
-    Note that \(\sum_{t \in T'} Pr_{M_{j}, \pi_{j-1}}[t]\) is the probability of \(\pi_{j-1}\) of reaching \((s, a)\). So if it is higher than \(\frac{\alpha}{H * R_{max}}\) then (1) holds and we are done. Otherwise, we have that \(|V^{\pi_{j-1}^*}_{M_{j-1}} - V^{\pi_{j}^*}_{M_j}| \leq \alpha\) which means that (2) holds.
+    Suffices to show that if (2) does not hold then (1) holds. Suppose that (2) does not hold. Let \(T\) be the set of all possible trajectories on \(M_{j}\) and let \(T'\) be the set of all trajectories that pass through \((s, a, h)\). Let \(P_M^{\pi}(t)\) denotes the probability that the trajectory \(t\) will be reached when playing policy \(\pi\) on the MDP \(M\).  Since (2) does not hold we have that
+    \[\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) < \frac{\alpha}{H R_{max}}.\]
+    We want to show that
+    \[V^*_{M_j} - V_{M_j}(\pi_{j-1}) < \alpha.\]
+    Note that the only difference between \(M_j\) and \(M_{j-1}\) is that in \(M_{j-1}\), the state \((s, h)\) is an absorbing state and any action from this state gives a reward of \(R_{max}\), but in \(M_j\) the reward is replaced by the actual reward and the transition probabilities are also replaced by the actual transition probabilities from \(M\). Thus we have
+    \[V^*_{M_j} \leq V^*_{M_{j-1}}.\]
+    \[\Rightarrow V^*_{M_j} - V_{M_j}(\pi_{j-1}) \leq V^*_{M_{j-1}} - V_{M_j}(\pi_{j-1})\]
+    We now further decompose each of these value functions over all possible trajectories. Let \(V_{M}(t)\) denote the total reward of going through trajectory \(t\) on MDP \(M\). Then we have
+    \[ |V_{M_j}(\pi_{j-1}) - V_{M_{j-1}}^* | = |\sum_{t \in T} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)|\]
+    \[= |\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) + \sum_{t \in T \setminus T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t) - \sum_{t \in T \setminus T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)\]
+    \[\leq |\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)| + |\sum_{t \in T \setminus T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) -  \sum_{t \in T \setminus T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)|\]
+    Since the rewards and transition probabilities for \(t \in T \setminus T'\) are the same for MDPs \(M_j\) and \(M_{j-1}\), the second expression above is equal to 0. Thus we are left with the first expression
+    \[= |\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)|.\]
+    Finally note that since the probabilities for all states before step \(h\) have the same transition probability for \(M_j\) and \(M_{j-1}\), we have that \(\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) = \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t)\). We also have that \(\forall t, 0 \leq V_{M_j}(t) \leq HR_{max}\) and \(0 \leq V_{M_{j-1}}(t) \leq HR_{max}\). Thus we have
+    \[|\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)| \leq \sum_{t \in T'} P_{M_j}^{\pi_{j-1}} H R_{max}.\]
+
+    \begin{note}[]
+        \color{red}
+        Not sure if the above argument is valid for this inequality, but a similar inequality was proved in the paper and the details were omitted.
+    \end{note}
+    
+    However from our assumption we have that 
+    \[\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) < \frac{\alpha}{H R_{max}}.\]
+
+    Substituting this into the previous expression we have that
+    \[V^*_{M_j} - V_{M_j}(\pi_{j-1}) < \alpha\]
+    
+    Which is the same statement as (1).
 \end{proof}
 
 \begin{lemma}[]
@@ -230,6 +252,7 @@ Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
 \end{lemma}
 
 \begin{note}[]
+    \color{red}
     We may require less than this number since we only have a single unknown state.
 \end{note}
 
@@ -238,6 +261,7 @@ Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
 \end{proof}
 
 \begin{note}[]
+    \color{red}
     In this case we don't really use \(\epsilon\)-greedy (we set \(\epsilon\) to zero).
 \end{note}
 
