--- a/scratch.tex
+++ b/scratch.tex
@@ -181,6 +181,8 @@ We start with an episodic nonstationery MDP \(M = (\mathcal{S}, \mathcal{A}, H, 
     Let \(M\) and \(L\) be defined as above. We define \(M_L\) as a MDP with the same states and actions as \(M\), and with the same rewards and transitions for \((s, a, h) \notin L\). For \((s, a, h) \in L\), the the reward will be equal to \(R_{max}\) and the transition will lead to an absorbing state that always gives reward \(R_{max}\).
 \end{defn}
 
+\subsubsection{Original R-Max Algorithm}
+
 We first describe the RMAX algorithm for MDP's:
 
 \begin{algorithm}[H]
@@ -216,25 +218,85 @@ We first describe the RMAX algorithm for MDP's:
 
 The RMAX algorithm works by starting with \(L_0 = \mathcal{S} \times \mathcal{A}\), and using the optimal policy for \(M_{L_0}\) on \(M\). Once enough samples have been collected from a state-action pair \((s, a, h)\), it is removed from \(L_0\) to get \(L_1 = L_0 \setminus \{(s, a, h)\}\), and then using the optimal policy for \(M_{L_1}\). This is done until there are no unknown states left (i.e., \(L\) is empty).
 
-Note that
+So we have
 \[\mathcal{S} \times \mathcal{A} \times [H] = L_0 \supset L_1 \supset \ldots \supset L_{SAH} = \emptyset\]
 
-Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
+We will also denote \(M_{L_j}\) as \(M_j\).
+
+\begin{note}[]
+    \color{red}
+    In the original R-max algorithm, the optimal policy for each \(M_j\) is not used since \(M_j\) is not know fully. Instead, the optimal policy for the estimated MDP for \(M_j\), which is based on the samples collected previously, is used.
+\end{note}
+
+\subsubsection{R-max Algorithm with Curriculum Learning}
+
+We first prove some preliminary results.
 
 \begin{thm}[]
-    Fix \(0 < \delta < 1, \epsilon > 0\). Then we can find an \(\epsilon\)-optimal policy with probability higher than \(1 - \delta\) by performing the following steps on the sequence of MDP's \(M_1, \ldots, M_{SAH}\) with corresponding optimal policies \(\pi^*_{1}, \pi^{*}_{SAH}\):
+    Let \(M\) be a MDP and let \(M'\) be another MDP such that \(||P_{M} - P_{M'}||_{\infty} < \frac{\epsilon}{SH^2R_{max}}\). Then for all policies \(\pi\),
+    \[|V_{M}(\pi) - V_{M'}(\pi)| \leq \epsilon\]
+\end{thm}
 
-    \begin{itemize}
-        \item Initialize \(\pi_0\) to be a random policy.
-        \item For \(t = 1, \ldots, n\), follow \(\pi_{t-1}\) with \(\epsilon\)-greedy exploration to collect \(K_2\) trajectories. Compute the optimal policy \(\pi_t\) from the model learned by the trajectories.
-        \item Output \(\pi_{SAH}\).
-    \end{itemize}
-    
+\begin{proof}[Proof]
+    Lemma 4 of the R-max paper.
+\end{proof}
+
+\begin{lemma}[]
+    Let \(M\) be an MDP. To approximate the transition probabilility for a state \(s, a, h\) in \(M\) with error less than \(\epsilon\) with probability higher than \(1 - \delta\), we need \(K_1 \geq \frac{-\ln(\delta/2S)}{2\epsilon^2}\) samples.
+\end{lemma}
+
+\begin{proof}[Proof]
+    Let \(n\) be the number of samples collected where the state \((s, a, h)\) leads to the state \(s'\). Let \(X_i\) be an indicator variable that is 1 if \((s, a, h)\) leads to \((s', h+1)\) and 0 otherwise in \(i\)th sample. Let \(p\) be the actual transition probability of transitioning from \((s, a, h)\) to \((s', h+1)\). Let \(S = \frac{X_1 + \ldots + X_{n}}{n}\). Note that \(0 \leq \frac{X_i}{n} \leq \frac{1}{n}\). Since there are \(S\) possibilities for \((s', h)\), we want the probability that \(|S - p| \geq \epsilon\) to be less than \(\frac{\delta}{S}\). By Hoeffding's inequality we have
+    \[P(|S - p| \geq \epsilon) \leq 2 \exp (\frac{-2\epsilon^{2}}{n(\frac{1}{n})^2}) = 2 \exp(-2n\epsilon^2).\]
+    We want
+    \[2 \exp(-2n\epsilon^2) \leq \delta/S\]
+    \[\Rightarrow -2n\epsilon^2 \leq \ln(\frac{\delta}{2S})\]
+    \[\Rightarrow n \geq \frac{-\ln(\frac{\delta}{2S})}{2\epsilon^2}.\]
+\end{proof}
+
+
+
+The curriculum learning algorithm utilizing R-max is as follows:
+
+\begin{algorithm}[H]
+    \caption{Curriculum Learning with R-max}
+\begin{algorithmic}[1]
+    \Require MDP \(M = (\mathcal{S}, \mathcal{A}, H, \mathbb{P}, R, \rho), \epsilon > 0, 0 \leq\delta \leq 1, R_{max} > 0\).
+    \Procedure{Curriculum\_R-max}{$M, \epsilon, \delta, R_{max}$}
+        \State $L \gets \mathcal{S} \times \mathcal{A} \times [H]$
+        \State $M_{1} \gets M_L$
+        \State \(\hat{M} \gets M_L\)
+        \State $\pi_{1} \gets$ optimal policy for \(\hat{M}\)
+        \State $i \gets 1$
+        \While{Running $\pi_{i}$ on $M$ explores a state in \(L\) with probability higher than \(\frac{\alpha}{H*R_{max}}\)}
+            \State $(s, a, h) \gets$ the state in \(L\) with the highest probability of being reached by running \(\pi_{i}\) on \(M_i\).
+            \State \(L \gets L \setminus \{(s, a, h)\}\)
+            \State $M_{i+1} \gets M_L$
+            \State Run \(\pi_i\) and \(\epsilon\)-greedy on \(M_{i+1}\) until \(K_1\) trajectories passing through \((s, a, h)\) are collected.
+            \State Update the reward and transitions for \((s, a, h)\) in \(\hat{M}\) based on the average values of the samples collected.
+            \State \(\pi_{i+1} \gets\) optimal policy for \(\hat{M}\)
+            \State \(i \gets i+1\)
+        \EndWhile
+        \State \textbf{Return} \(\pi_i\)
+
+    \EndProcedure
+\end{algorithmic}
+\end{algorithm}
+
+\begin{note}[]
+    \color{red}
+    Line 10 requires us to know the transition probabilities beforehand, which makes the problem of solving the MDP trivial. But if we don't know the MDP beforehand then we can't use curriculum learning because we wouldn't be able to create a sequence of MDP's from scratch.
+\end{note}
+
+\begin{thm}[]
+    Fix \(0 < \delta < 1, \epsilon > 0\). Then we can find an \(\epsilon\)-optimal policy with probability higher than \(1 - \delta\) by running the above algorithm with \(K_1 = \frac{-ln(\frac{\delta}{2S})}{2(\frac{\epsilon}{SH^2 R_{max}})^2}\) and \(\alpha < \frac{\epsilon}{SH^2 R_{max}}\).
+
+    Furthermore, the sample complexity of the algorithm is TBD.
 \end{thm}
 
 
 \begin{lemma}[]
-    Let \(\alpha > 0\) and \(1 \leq j \leq SA\). Denote \((s, a)\) to be the entry in \(L_{j-1}\) but not in \(L_{j}\). Consider playing the policy \(\pi_{j-1}^*\) with \(\epsilon\)-greedy on \(M_j\). Let \(V_{M}(\pi)\) denote the value function on MDP \(M\) of policy \(\pi\), and let \(V^*_{M}\) be the value of any optimal policy on \(M\). Then either
+    Let \(\alpha > 0\) and \(1 \leq j \leq SA\). Denote \((s, a, h)\) to be the entry in \(L_{j-1}\) but not in \(L_{j}\). Consider playing the policy \(\pi_{j-1}^*\) with \(\epsilon\)-greedy on \(M_j\). Let \(V_{M}(\pi)\) denote the value function on MDP \(M\) of policy \(\pi\), and let \(V^*_{M}\) be the value of any optimal policy on \(M\). Then either
 
     \begin{enumerate}
         \item \(V_{M_j} (\pi_{j-1}) > V^*_{M_j} - \alpha\)
@@ -261,11 +323,6 @@ Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
     \[= |\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)|.\]
     Finally note that since the probabilities for all states before step \(h\) have the same transition probability for \(M_j\) and \(M_{j-1}\), we have that \(\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) = \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t)\). We also have that \(\forall t, 0 \leq V_{M_j}(t) \leq HR_{max}\) and \(0 \leq V_{M_{j-1}}(t) \leq HR_{max}\). Thus we have
     \[|\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) V_{M_j}(t) - \sum_{t \in T'} P_{M_{j-1}}^{\pi_{j-1}}(t) V_{M_{j-1}}(t)| \leq \sum_{t \in T'} P_{M_j}^{\pi_{j-1}} H R_{max}.\]
-
-    \begin{note}[]
-        \color{red}
-        Not sure if the above argument is valid for this inequality, but a similar inequality was proved in the paper and the details were omitted.
-    \end{note}
     
     However from our assumption we have that 
     \[\sum_{t \in T'} P_{M_j}^{\pi_{j-1}}(t) < \frac{\alpha}{H R_{max}}.\]
@@ -276,34 +333,30 @@ Denote \(M_{L_j}\) as \(M_j\). The following describes the main theorem.
     Which is the same statement as (1).
 \end{proof}
 
+We will now prove a bound on the number of samples needed in line 11 in the above algorithm.
+
 \begin{lemma}[]
-    Fix \(0 < \delta < 1\). Then if we obtain \(K_1 = max((\frac{4SHR_max}{\epsilon})^3, -6\ln^3(\frac{\delta}{6SA^2})) + 1\) samples for \((s, a)\) then the estimate for the transition probability for \((s, a)\) is within \(\frac{\epsilon}{2*SHR_{max}}\) of the actual probabilities.
+    Line 11 in the above algorithm will require (with probability \(1-\delta\)) less than TBD samples.
 \end{lemma}
 
 \begin{proof}[Proof]
-    Use Chernoff bound and pigeonhole principle.
+    Fix \(i\) from the algorithm and consider \(\pi_i\) and \(M\). By line 7, the probability of exploring a state in \(L\) when running \(\pi_i\) on \(M\) is greater than \(\frac{\alpha}{HR_{max}}\). Since \(M_{i+1}\) is the same as \(M\) but with some states in \(L\) replaced by absorbing states, we must also have that the probability of exploring a state \(L\) when running \(\pi_i\) on \(M_{i+1}\) is \(\geq \frac{\alpha}{HR_{max}}\).
+
+    Since we choose \((s, a, h)\) to be the state in \(L\) with the highest probability of being reached by running \(\pi_i\) on \(M_i\), by the pigeonhole principle the probability of reaching \((s, a, h)\) when running \(\pi_i\) on \(M_{i+1}\) is \(\leq \frac{1}{SAH} \frac{\alpha}{HR_{max}} = \frac{\alpha}{SAH^2 R_{max}}\).
+
+    Let \(n\) be the number of trajectories we collect and let \(X_i\) be an indicator random variable that is 1 if the \(i\)th trajectory reaches \((s, a, h)\) and 0 otherwise. Let \(S = x_1 + \ldots + x_n\). Then we want
+    \[P(S \geq K_1) \geq 1 - \delta\]
+    \[\Rightarrow \sum_{i=0}^{K_1-1} {n \choose i} (\frac{\alpha}{SAH^2 R_{max}})^{i} (1 - \frac{\alpha}{SAH^{2} R_{max}})^{n-i} \geq 1-\delta\]
+    We can then solve for \(\delta\) or use some concentration inequality.
+
+
+    % By the Chernoff bound and the fact that \(S\) is a binomial distribution with moment generating function \(M_S(t) = (q + pe^t)^n\) where \(p = \frac{\alpha}{SAH^2 R_{max}}\) and \(q = 1-p\) we have that
+    % \[P(S \geq K_1) \leq \]
 \end{proof}
 
-\begin{lemma}[]
-    Fix \(0 < \delta < 1\) and \(\epsilon > 0\). Then we can find an \(\epsilon\)-optimal policy with probability higher than \(1-\delta\) for MDP \(M_j\) after collecting trajectories by running policy \(\pi_{j-1}\) with \(\epsilon\)-greedy exploration for \(K_2\) episodes where \(K_2^{\frac{1}{3}} + K_2 \frac{\alpha}{H*R_{max}} > A^2 S K_1\) and computing the optimal policy for that model.
-\end{lemma}
-
-\begin{note}[]
-    \color{red}
-    We may require less than this number since we only have a single unknown state.
-\end{note}
-
-\begin{proof}[Proof]
-    By the previous two lemmas, this number of steps ensures that \(K_1\) samples are obtained for \((s, a)\) with high (greater than \(1-\delta\)) probability. Thus, we can accurately estimate the MDP \(M_j\) with a TV distance of less than \(\frac{\epsilon}{2*SHR_{max}}\). By lemma 4 in the R-max paper, this means that the optimal value function of the estimated MDP and \(M_j\) are \(\epsilon\) close to each other. So calculate the optimal policy for the estimated MDP to get the resulting policy.
-\end{proof}
-
-\begin{note}[]
-    \color{red}
-    In this case we don't really use \(\epsilon\)-greedy (we set \(\epsilon\) to zero).
-\end{note}
 
 \begin{proof}[Proof (of Theorem)]
-    Follows from previous lemma.
+    Follows from previous lemmas.
 \end{proof}
 
 \subsection{UCRL}
